# maeFat

./: Makefile.am  README  configure  configure.ac
maemoFiles/: Makefile.am  com.nokia.maefat.service  maeFat.desktop
src/: Makefile.am  maeFat.c  maeFatColors.h
